--- a/piggy-bank-app/package.json
+++ b/piggy-bank-app/package.json
@@ -16,6 +16,7 @@
     "@mantine/core": "^5.5.6",
     "@mantine/dates": "^5.5.6",
     "@mantine/ds": "^5.5.6",
+    "@mantine/form": "^5.7.0",
     "@mantine/hooks": "^5.5.6",
     "@mantine/next": "^5.5.6",
     "@mantine/notifications": "^5.5.6",
@@ -35,7 +36,7 @@
     "solc": "^0.8.16",
     "tabler-icons-react": "^1.55.0",
     "use-debounce": "^8.0.4",
-    "wagmi": "^0.6.4"
+    "wagmi": "^0.6.8"
   },
   "devDependencies": {
     "eslint": "8.23.0",
